[gd_scene load_steps=13 format=3 uid="uid://jfqc2mtjwtqw"]

[ext_resource type="Script" uid="uid://cavd73f4drl4o" path="res://Scenes/GameSequence/title.gd" id="1_w31pl"]

[sub_resource type="FontVariation" id="FontVariation_4obfb"]

[sub_resource type="LabelSettings" id="LabelSettings_w31pl"]
font = SubResource("FontVariation_4obfb")
font_size = 81

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6ythm"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q24nh"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hpgy3"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pbhiy"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nmh73"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ta5eu"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sdynl"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n0t21"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d4abm"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[node name="Title" type="CanvasLayer"]
script = ExtResource("1_w31pl")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -252.0
offset_bottom = -141.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
text = "UNORDERED"
label_settings = SubResource("LabelSettings_w31pl")
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -361.5
offset_top = -113.0
offset_right = 361.5
offset_bottom = 322.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 57
alignment = 1

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 71
theme_override_styles/normal = SubResource("StyleBoxFlat_6ythm")
theme_override_styles/pressed = SubResource("StyleBoxFlat_q24nh")
theme_override_styles/hover = SubResource("StyleBoxFlat_hpgy3")
text = "START"

[node name="UpgradeButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 71
theme_override_styles/normal = SubResource("StyleBoxFlat_pbhiy")
theme_override_styles/pressed = SubResource("StyleBoxFlat_nmh73")
theme_override_styles/hover = SubResource("StyleBoxFlat_ta5eu")
text = "UPGRADE"

[node name="EndButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 71
theme_override_styles/normal = SubResource("StyleBoxFlat_sdynl")
theme_override_styles/pressed = SubResource("StyleBoxFlat_n0t21")
theme_override_styles/hover = SubResource("StyleBoxFlat_d4abm")
text = "EXIT"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/UpgradeButton" to="." method="_on_upgrade_button_pressed"]
[connection signal="pressed" from="VBoxContainer/EndButton" to="." method="_on_end_button_pressed"]
